# wazuh

framework/wazuh/tests/data/: schema_syscollector_000.sql
src/addagent/: CMakeLists.txt
src/addagent/tests/: AddAgentWrapper.cpp  AddAgentWrapper.h  CMakeLists.txt  ManageKeysTest.cpp  ManageKeysTest.h
src/config/: localfile-config.c
src/data_provider/src/: sysInfoLinux.cpp
src/data_provider/src/osinfo/: sysOsParsers.cpp
src/engine/ruleset/decoders/: syslog.yml
src/engine/ruleset/decoders/wazuh-agent/fim/: fim.yml
src/engine/ruleset/environments/: wazuh-environment.yml
src/engine/source/builder/: register.hpp
src/engine/source/builder/builders/: opBuilderSpeficHLP.cpp
src/engine/source/cmds/src/: start.cpp
src/engine/source/hlp2/: CMakeLists.txt
src/engine/source/hlp2/src/: logpar.cpp
src/engine/test/source/builder/: CMakeLists.txt
src/headers/: mem_collector.h
src/init/: inst-functions.sh
src/logcollector/: logcollector.c
src/shared/: expression.c  mem_collector.c  version_op.c
src/wazuh_db/: schema_agents.sql  schema_upgrade_v11.sql
src/wazuh_modules/: wm_sca.c
